# mother-claude

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  KNOWN_ISSUES.md  README.md  SECURITY.md  angular.json  eslint.config.js  justfile  package-lock.json  package.json
.claude/: settings.json
.claude/commands/: green.md
.github/workflows/: release.yml
docs/: APPLE_SIGNING.md  AUTOUPDATE.md  RELEASING.md
scripts/ci/: resolve-release-matrix.py
scripts/release/: macos-release.sh  make-latest-json.sh  release-upload.ps1  release-upload.sh  set-version.mjs
sidecar/: package-lock.json  package.json  tsconfig.json
sidecar/src/: agent-bridge.ts
src/: index.html  styles.scss
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  permissions.rs  state.rs
src-tauri/src/claude/: control.rs  experimental.rs  git.rs  home.rs  mod.rs  registry.rs  schema.rs  settings.rs  transcript.rs  watcher.rs
src-tauri/src/server/: auth.rs  http.rs  mod.rs  monitor.rs  tls.rs  ws.rs
src-tauri/tests/: integration.rs
src-tauri/tests/fixtures/: agents.json  roster.json  transcript_sample.jsonl
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
src/app/core/: api.service.ts  config.service.ts  models.ts  permissions.service.ts  realtime.service.ts  updater.service.ts
src/app/pages/good-to-know/: good-to-know.component.ts
src/app/pages/landing/: landing.component.ts
src/app/pages/onboarding/: onboarding.component.ts
src/app/pages/pair/: pair.component.ts
src/app/pages/services/: services.component.ts
src/app/pages/session-detail/: session-detail.component.html  session-detail.component.scss  session-detail.component.ts
src/app/pages/sessions/: sessions.component.html  sessions.component.scss  sessions.component.ts
src/app/pages/settings/: settings.component.html  settings.component.scss  settings.component.ts
src/app/shared/: diff.spec.ts  diff.ts  launch-options.component.ts  limitations.component.ts  markdown.spec.ts  markdown.ts  modal.component.ts  pairing.component.ts  permissions-list.component.ts  updater.component.ts  util.spec.ts  util.ts
