[package]
name = "mother-claude"
version = "0.1.0"
description = "Monitor and control every local Claude Code session from one dashboard."
authors = ["Mother Claude"]
edition = "2021"
rust-version = "1.77"

[lib]
# The Tauri app lives in a lib so it can be shared with mobile targets and tests.
name = "mother_claude_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
notify = "6"
notify-debouncer-full = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
git2 = { version = "0.19", default-features = false }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

[features]
# Stage 3 — PTY/CCR hijacking of foreign live sessions. Unsanctioned, unstable,
# OFF by default. Enable with `--features experimental`.
experimental = []

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
