[package]
name = "mother-claude"
version = "0.1.0"
description = "Monitor and control every local Claude Code session from one dashboard."
authors = ["Mother Claude"]
edition = "2021"
rust-version = "1.77"

[lib]
# The Tauri app lives in a lib so it can be shared with mobile targets and tests.
name = "mother_claude_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
notify = "8"
notify-debouncer-full = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
git2 = { version = "0.21", default-features = false }
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rcgen = "0.14"
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace", "fs"] }
uuid = { version = "1", features = ["v4"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
directories = "6"
sha2 = "0.10"
portable-pty = { version = "0.9", optional = true }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"

[features]
# Stage 3 — PTY/CCR hijacking of foreign live sessions. Unsanctioned, unstable,
# OFF by default. Enable with `--features experimental`.
experimental = ["dep:portable-pty"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
