[package]
name = "mother-claude"
version = "0.2.0"
description = "Monitor and control every local Claude Code session from one dashboard."
authors = ["Mother Claude"]
edition = "2021"
rust-version = "1.77"

[lib]
# The Tauri app lives in a lib so it can be shared with mobile targets and tests.
name = "mother_claude_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# In-app auto-updater (desktop-only; registered behind cfg(desktop) in lib.rs)
# and process control for relaunching into the new version after an update.
# Use native-tls (OS trust store) for the updater's downloads so its reqwest does
# not pull rustls-no-provider into the graph — that would otherwise unify onto our
# server/test reqwest and panic for want of a process-default rustls CryptoProvider
# (our server uses its own rustls+ring stack independently).
tauri-plugin-updater = { version = "2", default-features = false, features = ["native-tls", "zip"] }
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
notify = "8"
notify-debouncer-full = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
git2 = { version = "0.21", default-features = false }
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rcgen = "0.14"
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace", "fs"] }
uuid = { version = "1", features = ["v4"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
directories = "6"
sha2 = "0.10"
portable-pty = { version = "0.9", optional = true }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"

[features]
# Foreign-session injection via PTY-driving `claude attach` (Stage 3). Uses
# unsanctioned, unstable internals but is ON by default so the dashboard can
# drive foreign sessions. Build with `--no-default-features` to compile it out;
# disable at runtime with MOTHER_CLAUDE_FOREIGN_INJECTION=0.
default = ["experimental"]
experimental = ["dep:portable-pty"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
